deployment/app-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "tic-tac-toe-online"
  namespace: "default"
  labels:
    app: "tic-tac-toe-online"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "tic-tac-toe-online"
  template:
    metadata:
      labels:
        app: "tic-tac-toe-online"
    spec:
      containers:
        - name: "tic-tac-toe-online"
          image: "gcr.io/tic-tac-toe-online-265519/tic-tac-toe-online:0.0.1"
          imagePullPolicy: Always
