deployment/lb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "tic-tac-toe-online-ingress-service"
  labels:
    app: "tic-tac-toe-online"
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - playtictactoeonline.com
      secretName: tic-tac-toe-online-tls
  rules:
    - host: playtictactoeonline.com
      http:
        paths:
          - path: /
            backend:
              serviceName: tic-tac-toe-online-service
              servicePort: 80
